# embedded-services

./: AGENTS.md  Cargo.toml
.github/: copilot-instructions.md
.github/agents/: cargo-vet-auditor.agent.md
.github/skills/cargo-vet-audit/: SKILL.md
.github/workflows/: check.yml
.opencode/agent/: architect.md  coder.md  coordinator.md  docs.md  integrator.md  reliability.md  reviewer.md  tester.md
battery-service/: Cargo.toml
battery-service-interface/: Cargo.toml
battery-service-interface/src/: lib.rs
battery-service-messages/src/: lib.rs
battery-service-relay/: Cargo.toml
battery-service-relay/src/: lib.rs  serialization.rs
battery-service/src/: acpi.rs  context.rs  device.rs  lib.rs  mock.rs
battery-service/src/charger/: mod.rs
battery-service/src/fuel_gauge/: mod.rs
cfu-service/: Cargo.toml
cfu-service/src/: buffer.rs  client.rs  component.rs  host.rs  lib.rs  responses.rs  splitter.rs
cfu-service/src/basic/: config.rs  mod.rs
debug-service/: Cargo.toml
debug-service-messages/: Cargo.toml
debug-service-messages/src/: lib.rs
debug-service/src/: debug_service.rs  defmt_ring_logger.rs  lib.rs  mock_espi_service.rs
debug-service/src/transport/: espi.rs
docs/: api-guidelines.md
embedded-service/: Cargo.toml
embedded-service/src/: activity.rs  buffer.rs  comms.rs  critical_section_cell.rs  event.rs  fmt.rs  intrusive_list.rs  lib.rs  metrics.rs  service.rs  sync_cell.rs  thread_mode_cell.rs
embedded-service/src/broadcaster/: immediate.rs  mod.rs  single_publisher.rs
embedded-service/src/cfu/: component.rs
embedded-service/src/cfu/action/: device.rs
embedded-service/src/ec_type/: message.rs  mod.rs  structure.rs
embedded-service/src/ec_type/protocols/: mctp.rs
embedded-service/src/hid/: command.rs  mod.rs
embedded-service/src/ipc/: deferred.rs
embedded-service/src/oem/: mod.rs  vendor.rs
embedded-service/src/power/policy/: device.rs  flags.rs  mod.rs  policy.rs
embedded-service/src/relay/: hid.rs  mctp.rs  mod.rs
embedded-service/src/type_c/: comms.rs  controller.rs  event.rs  external.rs  mod.rs
embedded-service/src/type_c/ucsi/: lpm.rs  ppm.rs
espi-service/: Cargo.toml
espi-service/src/: espi_service.rs  lib.rs  mctp.rs  task.rs
examples/rt633/: Cargo.toml
examples/rt685s-evk/: Cargo.toml
examples/rt685s-evk/src/: lib.rs
examples/rt685s-evk/src/mocks/: keyboard.rs  mod.rs  mouse.rs
examples/std/: Cargo.toml
hid-service/src/i2c/: device.rs  host.rs
hid-service/src/i2c/passthrough/: mod.rs
hidi2c-target-service/: Cargo.toml
hidi2c-target-service/src/: attn_pin_handler.rs  constrained_hid_device.rs  device_descriptor.rs  error.rs  lib.rs  service.rs
keyboard-service/src/: gpio_kb.rs  hid_kb.rs  lib.rs
mctp-rs/: Cargo.toml
mctp-rs/src/: lib.rs
mctp-rs/src/message_type/: mod.rs  odp.rs
odp-client/: Cargo.toml
odp-client/src/: client.rs  error.rs  lib.rs  loopback.rs  mctp_serial.rs  serial.rs  serializable.rs  server.rs  transport.rs
odp-client/tests/: client_invoke.rs  error.rs  loopback.rs  mctp_serial.rs  serial.rs  transport.rs
odp-service-common/: Cargo.toml
odp-service-common/src/: runnable_service.rs
partition-manager/generation/: Cargo.toml
partition-manager/generation/src/: lib.rs
partition-manager/generation/src/tests/: duplicate.rs  mod.rs  partitions.json  partitions.yaml  same_output.rs
partition-manager/macros/: Cargo.toml
partition-manager/macros/src/: lib.rs
partition-manager/partition-manager/: Cargo.toml  README.md
partition-manager/partition-manager/src/: lib.rs
partition-manager/partition-manager/src/ext/: bdd.rs  esa.rs
partition-manager/partition-manager/src/test/: bdd.rs  macros.rs  partitions.yaml
platform-service/src/: embedded_crc.rs  reset.rs
platform-service/src/defaults/: embedded_crc.rs
power-button-service/: Cargo.toml
power-button-service/src/: button.rs  debounce.rs  lib.rs
power-policy-service/: Cargo.toml
power-policy-service/src/: charger.rs  consumer.rs  lib.rs  provider.rs  task.rs
power-policy-service/src/service/: consumer.rs  mod.rs
power-policy-service/tests/: full_flow.rs
power-policy-service/tests/common/: mock.rs  mod.rs
soc-manager-service/: Cargo.toml
soc-manager-service/src/: lib.rs  power_guard.rs
src/: activity.rs  buffer.rs  hid.rs  lib.rs
src/activity/: mod.rs
src/hid/: command.rs  mod.rs
storage-bus/: Cargo.toml
storage-bus-service/: Cargo.toml
storage-bus-service/src/: lib.rs  storage_bus.rs
supply-chain/: README.md  audits.toml  config.toml
thermal-service/: Cargo.toml
thermal-service-interface/src/: lib.rs
thermal-service-messages/: Cargo.toml
thermal-service-messages/src/: lib.rs
thermal-service-relay/: Cargo.toml
thermal-service-relay/src/: lib.rs  serialization.rs
thermal-service/src/: context.rs  default_handler.rs  fan.rs  lib.rs  mctp.rs  mptf.rs  sensor.rs  thermal_zone.rs  utils.rs
time-alarm-service/: Cargo.toml
time-alarm-service-interface/src/: lib.rs
time-alarm-service-messages/: Cargo.toml
time-alarm-service-messages/src/: acpi_timestamp.rs  lib.rs
time-alarm-service-relay/: Cargo.toml
time-alarm-service-relay/src/: lib.rs  serialization.rs
time-alarm-service/src/: acpi_timestamp.rs  lib.rs  mock.rs  task.rs  timer.rs
time-alarm-service/tests/: tad_test.rs
time-alarm-service/tests/common/: mocks.rs
type-c-interface-mocks/src/controller/: mod.rs  pd.rs
type-c-interface/src/port/: mod.rs
type-c-interface/src/service/: event.rs
type-c-service/: Cargo.toml
type-c-service/src/: lib.rs  task.rs  util.rs  wrapper.rs
type-c-service/src/controller/: event_receiver.rs  mod.rs  pd.rs  power.rs
type-c-service/src/driver/: tps6699x.rs
type-c-service/src/service/: context.rs  controller.rs  mod.rs  port.rs  power.rs  ucsi.rs  vdm.rs
type-c-service/src/wrapper/: backing.rs  cfu.rs  controller.rs  dp.rs  event_receiver.rs  message.rs  mod.rs  pd.rs  power.rs  vdm.rs
type-c-service/tests/: external.rs  ucsi.rs
type-c-service/tests/common/: mock.rs  mod.rs
uart-service/: Cargo.toml
uart-service/src/: lib.rs  task.rs
(+3 files in other folders)
