[package]
name = "battery-service-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.cargo-machete]
ignored = ["log"]

[dependencies]
defmt = { workspace = true, optional = true }
log = { workspace = true, optional = true }
embedded-services.workspace = true
odp-client.workspace = true
num_enum.workspace = true

battery-service-interface.workspace = true

[features]
defmt = [
    "dep:defmt",
    "embedded-services/defmt",
    "battery-service-interface/defmt",
    "odp-client/defmt",
]
log = ["dep:log", "embedded-services/log", "battery-service-interface/log"]

[lints]
workspace = true
