[package]
name = "debug-service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.cargo-machete]
ignored = ["log"]

[dependencies]
bbq2 = { version = "0.4.2", optional = true }
critical-section.workspace = true
defmt = { workspace = true, optional = true }
embassy-sync.workspace = true
embedded-services.workspace = true
log = { workspace = true, optional = true }
rtt-target = { version = "0.6.1", optional = true }

[lints]
workspace = true

[features]
default = []
defmt = [
    "dep:defmt",
    "dep:rtt-target",
    "dep:bbq2",
    "embedded-services/defmt",
    "embassy-sync/defmt",
]
log = ["dep:log", "embedded-services/log"]
