[package]
name = "debug-service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.cargo-machete]
ignored = ["log"]

[dependencies]
bbq2 = "0.4.2"
critical-section.workspace = true
defmt.workspace = true
debug-service-messages.workspace = true
embassy-sync.workspace = true
embedded-services.workspace = true
log.workspace = true
odp-client.workspace = true
rtt-target = "0.6.1"

[features]
defmt = ["debug-service-messages/defmt", "odp-client/defmt"]

[lints]
workspace = true
