[package]
name = "espi-service"
version = "0.1.0"
edition = "2024"
description = "eSPI embedded service implementation"
repository = "https://github.com/OpenDevicePartnership/embedded-services"
rust-version = "1.88"
license = "MIT"

[package.metadata.cargo-machete]
ignored = ["log"]

[lints]
workspace = true

[dependencies]
embedded-services.workspace = true
defmt = { workspace = true, optional = true }
log = { workspace = true, optional = true }
embassy-sync.workspace = true
embassy-imxrt = { workspace = true, features = ["mimxrt633s"], optional = true }
embassy-futures.workspace = true
mctp-rs = { workspace = true, features = ["espi"], optional = true }

[target.'cfg(target_os = "none")'.dependencies]
cortex-m-rt = { workspace = true, optional = true }
cortex-m = { workspace = true, features = [
    "inline-asm",
    "critical-section-single-core",
], optional = true }

[features]
default = []
imxrt = [
    "dep:embassy-imxrt",
    "dep:mctp-rs",
    "dep:cortex-m-rt",
    "dep:cortex-m",
]
defmt = [
    "dep:defmt",
    "embedded-services/defmt",
    "embassy-sync/defmt",
    "embassy-imxrt?/defmt",
    "mctp-rs?/defmt",
]

log = ["dep:log", "embedded-services/log"]
