[package]
name = "power-button-service"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Power button service built upon embedded service"
repository = "https://github.com/OpenDevicePartnership/embedded-services"
rust-version = "1.85"

[dependencies]
defmt = { workspace = true, optional = true }
embassy-time.workspace = true
embedded-hal-async.workspace = true
embedded-hal.workspace = true
log = { workspace = true, optional = true }

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["eh1", "embedded-hal-async"] }
tokio = { version = "1.45.0", features = ["rt", "macros"] }
