[package]
name = "time-alarm-service-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.cargo-machete]
ignored = ["log"]

[dependencies]
defmt = { workspace = true, optional = true }
log = { workspace = true, optional = true }
embedded-mcu-hal.workspace = true
num_enum.workspace = true
odp-client.workspace = true
time-alarm-service-interface.workspace = true

[features]
defmt = [
    "dep:defmt",
    "embedded-mcu-hal/defmt",
    "time-alarm-service-interface/defmt",
    "odp-client/defmt",
]
log = ["dep:log"]

[lints]
workspace = true
